minor edits ch5 linearity

--- a/04_Ch_5_Linearity/061-Linear_functions.ipynb
+++ b/04_Ch_5_Linearity/061-Linear_functions.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "## Linear Functions\n",
     "\n",
-    "We start with the basic definition of a _linear function_ which captures the fundamental idea of linearity: it does not matter of we sum two vectors and then transform them via a liner function, or apply the linear function to each vector individually, and then sum their transformations. A formal definition is given below.\n",
+    "We start with the basic definition of a _linear function_ which captures the fundamental idea of linearity: closed under addition and scalar multiplication. A formal definition is given below.\n",
     ":::{prf:definition} Linear Function\n",
     ":label: linear_fn_defn\n",
     "Let $V$ and $W$ be a real vector space. A function $L:V \\to W$ mapping the _domain $V$_ to the _codomain $W$_ is called _linear_ if it obeys two basic rules:\n",
@@ -421,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
