done with half of lec 19

--- a/09_Ch_10_SVD_Apps/111-SVD.ipynb
+++ b/09_Ch_10_SVD_Apps/111-SVD.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "title: 10.1 SVD Theory\n",
-    "subject:  SVD\n",
+    "subject:  Singular Value Decomposition (SVD)\n",
     "subtitle: \n",
     "short_title: 10.1 SVD Theory\n",
     "authors:\n",
@@ -45,7 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- how to handle the optimization principle we saw for characterizing eigenvalues, but in the case of general matrices, such as nonsquare matrices\n",
+    "- what are the singular values of a matrix and how relates to the rank\n",
+    "- what is the singular value decompostion of a matrix and how to find such a decomposition "
    ]
   },
   {
