--- a/09_Ch_10_SVD_Apps/112-Lin_Alg_Apps.ipynb
+++ b/09_Ch_10_SVD_Apps/112-Lin_Alg_Apps.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "title: 10.2 SVD Applications\n",
-    "subject:  SVD\n",
+    "subject:  Singular Value Decomposition (SVD)\n",
     "subtitle: \n",
     "short_title: 10.2 SVD Applications\n",
     "authors:\n",
@@ -45,7 +45,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- what is the condition number of a matrix\n",
+    "- how to compute bases of the fundamental subsapces\n",
+    "- what is the pseudoinverse of a matrix and how to compute it"
    ]
   },
   {
@@ -84,7 +86,7 @@
     "\n",
     "Given an SVD for an $m\\times n$ matrix $A\\in\\mathbb{R}^{m\\times n}$ with $\\text{rank}(A)=r$, let $\\vv u_1,\\ldots,\\vv u_r$ be the left singular vectors, $\\vv v_1,\\ldots,\\vv v_r$ the right singular vectors, and $\\sigma_1,\\ldots,\\sigma_r$ the singular values.\n",
     "\n",
-    "Recall that we showed that $\\vv u_1,\\ldots,\\vv u_r$ forms a basis for $\\text{Col}(A)$. Let $\\vv u_{r+1},\\ldots,\\vv u_m$ be an orthonormal basis for $\\text{Col}(A)^\\perp$ so that $\\vv u_1,\\ldots,\\vv u_m$ form a basis for $\\mathbb{R}^m$, computed for example using the Gram-Schmidt Process. Then, by the Fundamental Theorem of Linear Algebra~(FTLA), we have that $\\text{Col}(A)^\\perp = \\text{Null}(A^T) = \\text{span}\\{\\vv u_{r+1},\\ldots,\\vv u_m\\}$, i.e., these vectors form an orthonormal basis for $\\text{Null}(A^T)=\\text{LNull}(A)$.\n",
+    "Recall that we showed that $\\vv u_1,\\ldots,\\vv u_r$ forms a basis for $\\text{Col}(A)$. Let $\\vv u_{r+1},\\ldots,\\vv u_m$ be an orthonormal basis for $\\text{Col}(A)^\\perp$ so that $\\vv u_1,\\ldots,\\vv u_m$ form a basis for $\\mathbb{R}^m$, computed for example using the Gram-Schmidt Process. Then, by the Fundamental Theorem of Linear Algebra (FTLA), we have that $\\text{Col}(A)^\\perp = \\text{Null}(A^T) = \\text{span}\\{\\vv u_{r+1},\\ldots,\\vv u_m\\}$, i.e., these vectors form an orthonormal basis for $\\text{Null}(A^T)=\\text{LNull}(A)$.\n",
     "\n",
     "Next, recall that $\\vv v_1,\\ldots,\\vv v_r,\\vv v_{r+1},\\ldots,\\vv v_n$, the eigenvectors of $A^TA$, form an orthonormal\n",
     "basis of $\\mathbb{R}^n$. Since $A\\vv v_i = 0$ for $i = r+1, \\ldots, n$, we have that $\\vv v_{r+1},\\ldots,\\vv v_n$ span a subspace of $\\text{Null}(A)$ of dimension $n-r$. But, by the FTLA, $\\text{dim Null}(A) = n - \\text{rank}(A) = n-r$.\n",
