finished dumping lec 22

--- a/11_Ch_12_Optimization/133-backprop.ipynb
+++ b/11_Ch_12_Optimization/133-backprop.ipynb
@@ -262,6 +262,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's proceed to compute the derivative with respect to the parameter $x_{l-2}$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial l}{\\partial x_{l-2}} &= \\frac{\\partial l}{\\partial w_l} \\cdot \\frac{\\partial w_l}{\\partial w_{l-1}} \\cdot \\left( \\frac{\\partial w_{l-1}}{\\partial x_{l-2}} + \\frac{\\partial w_{l-1}}{\\partial w_{l-2}} \\cdot \\frac{\\partial w_{l-2}}{\\partial x_{l-2}} \\right) \\\\\n",
+    "&= \\frac{\\partial l}{\\partial w_l} \\cdot \\frac{\\partial w_l}{\\partial w_{l-1}} \\cdot \\frac{\\partial w_{l-1}}{\\partial x_{l-2}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "We see again that if we can \"stop\" one or two layers short depends explicitly on $x_{l-2}$. Formally, we have:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial l}{\\partial x_l} &= \\frac{\\partial l}{\\partial w_l} \\cdot \\frac{\\partial w_l}{\\partial x_l} \\\\\n",
+    "\\frac{\\partial l}{\\partial x_{l-1}} &= \\frac{\\partial l}{\\partial w_l} \\cdot \\frac{\\partial w_l}{\\partial w_{l-1}} \\cdot \\frac{\\partial w_{l-1}}{\\partial x_{l-1}} \\quad \\left( \\frac{\\partial l}{\\partial w_{l-1}} = \\frac{\\partial l}{\\partial w_l} \\cdot \\frac{\\partial w_l}{\\partial w_{l-1}} \\right) \\\\\n",
+    "\\frac{\\partial l}{\\partial x_{l-2}} &= \\frac{\\partial l}{\\partial w_l} \\cdot \\frac{\\partial w_l}{\\partial w_{l-1}} \\cdot \\frac{\\partial w_{l-1}}{\\partial w_{l-2}} \\cdot \\frac{\\partial w_{l-2}}{\\partial x_{l-2}} \\quad \\left( \\frac{\\partial l}{\\partial w_{l-2}} = \\frac{\\partial l}{\\partial w_{l-1}} \\cdot \\frac{\\partial w_{l-1}}{\\partial w_{l-2}} \\right) \\\\\n",
+    "\\frac{\\partial l}{\\partial x_j} &= \\frac{\\partial l}{\\partial w_l} \\cdot \\frac{\\partial w_l}{\\partial w_{l-1}} \\cdot \\frac{\\partial w_{l-1}}{\\partial w_{l-2}} \\cdot \\frac{\\partial w_{l-2}}{\\partial x_{l-2}} \\cdots \\frac{\\partial w_{j+1}}{\\partial w_j} \\cdot \\frac{\\partial w_j}{\\partial x_j} \\quad \\left( \\frac{\\partial l}{\\partial w_{j+1}} = \\frac{\\partial l}{\\partial w_j} \\cdot \\frac{\\partial w_j}{\\partial w_{j+1}} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "Notice that there is a lot of reuse of expressions, which means we don't have to recompute things over and over. In particular\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial l}{\\partial w_{l-1}} &= \\frac{\\partial l}{\\partial w_l} \\cdot \\frac{\\partial w_l}{\\partial w_{l-1}}, \\quad\n",
+    "\\frac{\\partial l}{\\partial w_j} = \\frac{\\partial l}{\\partial w_{j+1}} \\cdot \\frac{\\partial w_{j+1}}{\\partial w_j},\n",
+    "\\end{align*}\n",
+    "\n",
+    "and in general\n",
+    "\\begin{equation*}\n",
+    "\\frac{\\partial l}{\\partial w_{j-1}} = \\frac{\\partial l}{\\partial w_j} \\cdot \\frac{\\partial w_j}{\\partial w_{j-1}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "where $\\frac{\\partial l}{\\partial w_j}$ will have been computed at the layer above. This is another key piece of backpropagation!\n",
+    "\n",
+    "The only thing left to compute is $\\frac{\\partial w_j}{\\partial x_j}$ - this is now just an exercise in calculus, so we'll not work it out in class, but the chain rules will provide tools to forge with further automation for those interested.\n",
+    "\n",
+    "Optional:\n",
+    "We apply our chain rule $(w_j = X_j [G_j:1])$ to get\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\frac{\\partial w_j}{\\partial x_j} = \\frac{\\partial}{\\partial x_j} G(X_j [G_{j-1}:1]) = \\frac{\\partial G}{\\partial w} \\cdot \\frac{\\partial w}{\\partial x_j}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Now for $G(w) = \\begin{bmatrix} G(w_1) \\\\ \\vdots \\\\ G(w_{p+1}) \\end{bmatrix}$, $\\frac{\\partial G}{\\partial w} = \\begin{bmatrix} G'(w_1) \\\\ \\vdots \\\\ G'(w_{p+1}) \\end{bmatrix}$. Next, we need to find\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\frac{\\partial w}{\\partial x_j} = \\frac{\\partial}{\\partial x_j} (X_j [G_{j-1}:1]). \\text{ This can be computed using matrix/linear algebra (tedious).}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "We won't work it out, but note that it can be found efficiently."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n"
    ]
   }
