dumped all of lec 23

--- a/11_Ch_12_Optimization/134-SGD.ipynb
+++ b/11_Ch_12_Optimization/134-SGD.ipynb
@@ -198,6 +198,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**TO DO**: Electronic Brain teaches itself pic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "But suppose we were allowed to have two classifiers, and then combine them using a nonlinearity?\n",
+    "\n",
+    "\\begin{tikzpicture}\n",
+    "\\draw[->] (-2,0) -- (2,0) node[right] {$z_1$};\n",
+    "\\draw[->] (0,-2) -- (0,2) node[above] {$z_2$};\n",
+    "\\draw[blue, thick] (-2,1) -- (2,1) node[right] {$2$};\n",
+    "\\draw[purple, thick] (1,-2) -- (1,2);\n",
+    "\\draw[magenta, thick] (-2,-2) -- (2,2);\n",
+    "\\node[magenta] at (1.5,1.5) {$H_1^+ = \\{z_2 - z_1 > 0\\}$};\n",
+    "\\node[purple] at (-1.5,1.5) {$H_2^+ = \\{z_1 - z_2 > 0\\}$};\n",
+    "\\end{tikzpicture}\n",
+    "\n",
+    "In the image above, we define a pink classifier that returns $f_1(z) > z_1$\n",
+    "a purple classifier that returns $f_2(z) = z_2$. If we define our output to be\n",
+    "\n",
+    "\\[f(z) = f_1(z) f_2(z) = -z_1 z_2,\\]\n",
+    "\n",
+    "then we see that this 'works':\n",
+    "\n",
+    "\\begin{tabular}{c|c|c|c|c}\n",
+    " & 1 & 2 & 3 & 4 \\\\\n",
+    "\\hline\n",
+    "sign $f_1(z)$ & +1 & -1 & -1 & +1 \\\\\n",
+    "sign $f_2(z)$ & -1 & -1 & +1 & +1 \\\\\n",
+    "sign $f(z)$ & -1 & +1 & -1 & +1\n",
+    "\\end{tabular}\n",
+    "\n",
+    "This 'worked'! The two key ingredients here are:\n",
+    "\\begin{enumerate}\n",
+    "\\item Having intermediate computation, called hidden layers\n",
+    "\\item Allowing for some nonlinearity.\n",
+    "\\end{enumerate}\n",
+    "\n",
+    "These two ingredients are combined to define the Multilayer Perceptron (MLP).\n",
+    "\n",
+    "A single hidden layer MLP is defined by the equations:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "h &= \\sigma(W_1 z + b_1) \\quad \\text{(MLP1)} \\\\\n",
+    "o &= W_2 h + b_2\n",
+    "\\end{align*}\n",
+    "\n",
+    "The key features of (MLP1) are:\n",
+    "\\begin{itemize}\n",
+    "\\item An element-wise nonlinearity $\\sigma$, called an activation function.\n",
+    "\\item The input is $z \\in \\mathbb{R}^n$.\n",
+    "\\item The hidden layer is defined by a weight matrix $W_1 \\in \\mathbb{R}^{h \\times n}$ and a bias vector $b_1 \\in \\mathbb{R}^h$\n",
+    "\\item The output layer is defined by a weight matrix $W_2 \\in \\mathbb{R}^{p \\times h}$ and bias vector $b_2 \\in \\mathbb{R}^p$\n",
+    "\\item The overall map maps input $z \\in \\mathbb{R}^n$ to output $o \\in \\mathbb{R}^p$.\n",
+    "\\end{itemize}\n",
+    "\n",
+    "In practice, (MLP1) is trained to find $W_1, W_2, b_1, b_2$ using SGD and backpropagation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\section*{Why do we need a nonlinear activation function?}\n",
+    "\n",
+    "Suppose we didn't include $\\sigma(\\cdot)$, and defined our MLP as $h = W_1 z + b_1$, $o = W_2 h + b_2$.\n",
+    "If we eliminate the hidden layer variable $h$, we get\n",
+    "\n",
+    "\\[o = W_2(W_1 z + b_1) + b_2 = \\underbrace{W_2 W_1}_W z + \\underbrace{W_2 b_1 + b_2}_b = Wz + b.\\]\n",
+    "\n",
+    "This shows that we do not increase the expressivity of our model; as without the activation\n",
+    "function, our model class reduces to affine functions. In some sense, this nonlinearity is\n",
+    "the \"secret sauce\" of MLPs.\n",
+    "\n",
+    "Some common activation functions include:\n",
+    "\n",
+    "\\subsection*{The Sigmoid function:}\n",
+    "\n",
+    "\\begin{itemize}\n",
+    "\\item Maps input into (0,1):\n",
+    "\n",
+    "\\[\\text{sigmoid}(x) = \\frac{1}{1+e^{-x}}\\]\n",
+    "\n",
+    "[Insert sigmoid function graph here]\n",
+    "\n",
+    "\\item Can view as a \"soft version\" of $\\sigma(x) = 1$ if $x > 0$ and $\\sigma(x) = 0$ if $x \\leq 0$.\n",
+    "\\item This is allows for binary classification over classes \\{0,1\\}.\n",
+    "\\end{itemize}\n",
+    "\n",
+    "\\subsection*{The Rectified Linear Unit (ReLU):}\n",
+    "\n",
+    "\\[ReLU(x) = \\max\\{x, 0\\}.\\]\n",
+    "\n",
+    "[Insert ReLU function graph here]\n",
+    "\n",
+    "Which activation function to use is a bit of an art, but these are generally accepted tricks\n",
+    "of the trade that you'll learn about in ESE 5460. There are also many more than these two, with\n",
+    "new ones being invented."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\\section*{Deep MLPs}\n",
+    "\n",
+    "There is nothing preventing us from adding more hidden layers. The $L$-hidden-layer\n",
+    "MLP is defined as:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "h_1 &= \\sigma(W_1 x + b_1) \\\\\n",
+    "h_2 &= \\sigma(W_2 h_1 + b_2) \\\\\n",
+    "&\\vdots \\\\\n",
+    "h_L &= \\sigma(W_L h_{L-1} + b_L) \\\\\n",
+    "o &= W_{L+1} h_L + b_{L+1}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Shown on the right is an example with 3 hidden layers.\n",
+    "\n",
+    "The important thing to notice is these functions are\n",
+    "compatible with our discussion on backpropagation, meaning computing gradients with respect to\n",
+    "the parameters $W_1,\\ldots,W_{L+1}, b_1,\\ldots,b_{L+1}$ can be done efficiently!\n",
+    "\n",
+    "In the online notes, we'll show you how to take advantage of autodifferentiation to\n",
+    "efficiently train MLPs in code.\n",
+    "\n",
+    "\\begin{tikzpicture}[scale=0.7]\n",
+    "\\node[circle,draw,fill=blue!20] (x1) at (0,0) {$x_1$};\n",
+    "\\node[circle,draw,fill=blue!20] (x2) at (2,0) {$x_2$};\n",
+    "\\node[circle,draw,fill=blue!20] (x3) at (4,0) {$x_3$};\n",
+    "\\node[circle,draw,fill=blue!20] (x4) at (6,0) {$x_4$};\n",
+    "\n",
+    "\\node[circle,draw,fill=blue!20] (h11) at (0,2) {$h_1$};\n",
+    "\\node[circle,draw,fill=blue!20] (h12) at (1.5,2) {$h_2$};\n",
+    "\\node[circle,draw,fill=blue!20] (h13) at (3,2) {$h_3$};\n",
+    "\\node[circle,draw,fill=blue!20] (h14) at (4.5,2) {$h_4$};\n",
+    "\\node[circle,draw,fill=blue!20] (h15) at (6,2) {$h_5$};\n",
+    "\n",
+    "\\node[circle,draw,fill=blue!20] (h21) at (1,4) {$h_1$};\n",
+    "\\node[circle,draw,fill=blue!20] (h22) at (3,4) {$h_2$};\n",
+    "\\node[circle,draw,fill=blue!20] (h23) at (5,4) {$h_3$};\n",
+    "\n",
+    "\\node[circle,draw,fill=blue!20] (h31) at (2,6) {$h_1$};\n",
+    "\\node[circle,draw,fill=blue!20] (h32) at (4,6) {$h_2$};\n",
+    "\n",
+    "\\node[circle,draw,fill=blue!20] (o1) at (2,8) {$o_1$};\n",
+    "\\node[circle,draw,fill=blue!20] (o2) at (4,8) {$o_2$};\n",
+    "\n",
+    "\\draw (x1) -- (h11) -- (h21) -- (h31) -- (o1);\n",
+    "\\draw (x2) -- (h12) -- (h22) -- (h32) -- (o2);\n",
+    "\\draw (x3) -- (h13) -- (h23);\n",
+    "\\draw (x4) -- (h14);\n",
+    "\\draw (h15) -- (h23);\n",
+    "\n",
+    "\\node[text width=3cm] at (-2,0) {Input layer};\n",
+    "\\node[text width=3cm] at (-2,2) {Hidden layer};\n",
+    "\\node[text width=3cm] at (-2,4) {Hidden layer};\n",
+    "\\node[text width=3cm] at (-2,6) {Hidden layer};\n",
+    "\\node[text width=3cm] at (-2,8) {Output layer};\n",
+    "\n",
+    "\\end{tikzpicture}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n"
    ]
   }
