almost done with lec 19

--- a/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb
+++ b/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: 11.1 Applications\n",
+    "title: 11.1 Basics of Statistics\n",
     "subject:  Principal Component Analysis (PCA)\n",
     "subtitle: \n",
-    "short_title: 11.1 Applications\n",
+    "short_title: 11.1 Basics of Statistics\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 19 - Principal Component Analysis with Applications to Imaging and Data Compression.pdf>`"
    ]
@@ -70,7 +70,7 @@
     ":::{figure}../figures/12-railroad.jpg\n",
     ":label:railroad\n",
     ":alt:Railroad Satellite Imagery\n",
-    ":width: 400px\n",
+    ":width: 600px\n",
     ":align: center\n",
     ":::\n",
     "\n",
@@ -84,13 +84,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Observation Matrix, Mean, and Covariance\n",
+    "## Observation Matrix\n",
     "\n",
     "Let $\\mathbf{x}_j \\in \\mathbb{R}^p$ denote an observation vector obtained from measurement $j$, and suppose that $j=1,\\ldots,N$ measurements are obtained. The _observation matrix $X \\in \\mathbb{R}^{p \\times N}$_ is a $p \\times N$ matrix with $j^{th}$ column equal to the $j^{th}$ measurement vector $\\mathbf{x}_j$:\n",
     "\n",
-    "$$\n",
+    "\\begin{equation}\n",
+    "\\label{obs_mat}\n",
     "X = \\bm \\mathbf{x}_1 & \\mathbf{x}_2 & \\cdots & \\mathbf{x}_N\\em \\in \\mathbb{R}^{p \\times N}\n",
-    "$$\n",
+    "\\end{equation}\n",
     "\n",
     "::::{prf:example}\n",
     ":label: eg_1\n",
@@ -270,180 +271,22 @@
     "- $S_{ii}$ = variance of measurement $i$ across measurements $j=1,\\ldots,N$\n",
     "- $S_{kl}$ = cvariance of measurements $k$ and $l$ across measurements $j=1,\\ldots,N$.\n",
     "\n",
-    "** TO DO** Please include examples of correlated, anticorrelated, and uncorrelated vectors, e.g., Fig 3.8 from VMLS."
+    "**TO DO** Please include examples of correlated, anticorrelated, and uncorrelated vectors, e.g., Fig 3.8 from VMLS."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\\textbf{Principal Component Analysis}\n",
-    "\n",
-    "To make our notation a little bit cleaner, we'll assume that our observations $x_i \\in \\mathbb{R}^p$ and observation matrix $X \\in \\mathbb{R}^{N \\times p}$ have already been centered so that $\\bar{x} = 0$ and $\\bar{e} = 0$.\n",
-    "\n",
-    "The goal of PCA is to find a new orthogonal basis for $\\mathbb{R}^p$ defined by the orthogonal $p \\times p$ matrix $P = [u_1, \\ldots, u_p]$, for $u_1, \\ldots, u_p$ an orthonormal basis of $\\mathbb{R}^p$:\n",
-    "\n",
-    "\\[x = Py = y_1u_1 + y_2u_2 + \\cdots + y_pu_p\\]\n",
-    "\n",
-    "with the property that the new coordinates $y_1, \\ldots, y_p$ are uncorrelated (i.e., have covariance 0) and arranged in decreasing order of variance. The matrix $P$ is orthogonal, and hence $y = P^T x = P^{-1} x$ provides a decomposition of the measurement $x$ along the directions $u_1, \\ldots, u_p$, where most of the variance in $x$ can be found in the direction $u_1$, 2nd most in direction $u_2$, etc.\n",
-    "\n",
-    "What does the covariance matrix of the new variables $y$ look like? Note that if $y_i = P^T x_i$, then $Y = P^T X$ is the observation matrix in our new basis, so let\n",
-    "\n",
-    "\\[S_y = YY^T = P^T X X^T P = P^T S_x P.\\]\n",
-    "\n",
-    "If the change of basis $x = Py$ is such that the $y_i$ are uncorrelated, the $S_y$, the covariance matrix of the observations $y$, should be diagonal. Our goal is therefore to pick an orthonormal basis $u_1, \\ldots, u_p$ so that for $P = [u_1, \\ldots, u_p]$,\n",
-    "\n",
-    "\\[S_y = P^T S_x P\\]\n",
-    "\n",
-    "is diagonal. (But we already know how to do this!) $S_x$ is a symmetric matrix, and thus admits a spectral decomposition $S_x = Q \\Lambda Q^T$, where $Q = [u_1, \\ldots, u_p]$ is an orthogonal matrix composed of the orthonormal eigenvectors of $S_x$, and $\\Lambda = \\text{diag}(\\lambda_1, \\ldots, \\lambda_p)$ a diagonal matrix of its eigenvalues. Hence, setting $P = Q$, we have\n",
-    "\n",
-    "\\[S_y = Q^T S_x Q = Q^T Q \\Lambda Q^T Q = \\Lambda\\]"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Basics_of_Statistics.ipynb)\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "which is diagonal, as we wanted!\n",
-    "\n",
-    "The orthonormal eigenvectors $u_1, \\ldots, u_p$ of the covariance matrix $S_x$ are called the \\textbf{principal components} of the data in the observation matrix $X$: the \\textbf{first principal component} is the eigenvector $u_1$ corresponding to the largest eigenvalue $\\lambda_1$, etc.\n",
-    "\n",
-    "The first principal component $u_1$ determines the new variable $y_1$ by projecting the original observation $x$ along $u_1$. In particular, since $u_1$ is the first column of $P$, $u_1^T$ is the first row of $P^T$, and hence\n",
-    "\n",
-    "\\[y_1 = u_1^T x,\\]\n",
-    "\n",
-    "which is a projection of $x$ along the unit vector $u_1$. In a similar fashion, $u_2$ determines $y_2$, and so on. The direction $u_1$ is aligned with the direction of maximal variance in the data, so we expect \"most of\" each observation $x$ to be aligned with $u_1$.\n",
-    "\n",
-    "We'll see how to use this observation to compress multivariate data via dimensionality reduction next, but first, let's take a look at a simple example:\n",
-    "\n",
-    "\\textbf{Example:} The initial data for our landsat imaging sample was composed of 4 million observations $x_i \\in \\mathbb{R}^3$. The associated covariance matrix (after centering the data) is:\n",
-    "\n",
-    "\\[S_x = \\begin{pmatrix}\n",
-    "2394.98 & 2411.94 & 2138.80 \\\\\n",
-    "2411.94 & 3066.42 & 2373.40 \\\\\n",
-    "2138.80 & 2373.40 & 2650.71\n",
-    "\\end{pmatrix}\\]\n",
-    "\n",
-    "The eigenvalue/vectors of $S_x$ are:\n",
-    "\n",
-    "\\begin{align*}\n",
-    "\\lambda_1 &= 7614.33, u_1 = \\begin{pmatrix} .5491 \\\\ .6295 \\\\ .5510 \\end{pmatrix} & \\lambda_2 = 427.63, u_2 = \\begin{pmatrix} -.8299 \\\\ .3026 \\\\ .8179 \\end{pmatrix} & \\lambda_3 = 98.10, u_3 = \\begin{pmatrix} .0834 \\\\ -.7157 \\\\ .1441 \\end{pmatrix}\n",
-    "\\end{align*}\n",
-    "\n",
-    "Up to 3 decimal places, the first principal component is:\n",
-    "\n",
-    "\\[y_1 = .549x_1 + .630x_2 + .551x_3\\]\n",
-    "\n",
-    "This equation was used to create image (d) by taking a weighted combination of the three spectral band measurements (each suitably centered to gray scale so they too can be combined).\n",
-    "\n",
-    "The covariance of the transformed observations $y = (y_1, y_2, y_3)$ is the diagonal matrix\n",
-    "\n",
-    "\\[\\Lambda = \\text{diag}(7614.33, 427.63, 98.10)\\]\n",
-    "\n",
-    "How can we use the fact that $\\lambda_1 = 7614.33$ is much larger than $\\lambda_2 = 427.63$ and $\\lambda_3 = 98.10$?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\textbf{Compression via Dimensionality Reduction}\n",
-    "\n",
-    "PCA is very useful for applications in which most of the variation of the data lies in a low-dimensional subspace, i.e., can be explained by only a few of the new variables $y_1, \\ldots, y_p$.\n",
-    "\n",
-    "The total variance in the original data can be measured by summing together the variances of the original observation variables, i.e., by computing the sum of the diagonal entries of $S_x$:\n",
-    "\n",
-    "\\[T\\text{Var}(X) = s_{11} + s_{22} + \\cdots + s_{pp}.\\]\n",
-    "\n",
-    "Our first observation is that variance is preserved by the change of variables $y = P^T x$. We have argued this on occasion, but the intuition is that since the change of basis matrix $P$ is orthogonal, it only rotates/flips vectors, and does not stretch or squish them. This means that\n",
-    "\n",
-    "\\[T\\text{Var}(y) = \\gamma_1 + \\cdots + \\gamma_p = s_{11} + \\cdots + s_{pp} = T\\text{Var}(X),\\]\n",
-    "\n",
-    "where $\\gamma_i$ is the variance in the $y_i$ coordinate. Thus the ratio $\\gamma_i/T\\text{Var}(y)$ measures the fraction of the total variance \"explained\" by $y_i$.\n",
-    "\n",
-    "This suggests that if we are interested in compressing the original data, a strategy could be to discard the directions $u_i$ for which $\\gamma_i/T\\text{Var}(y)$ is very small, as these directions do not capture much of the variation in the data.\n",
-    "\n",
-    "\\textbf{Example:} The total variance of the Landsat data is\n",
-    "\n",
-    "\\[T\\text{Var}(X) = T\\text{Var}(y) = \\lambda_1 + \\lambda_2 + \\lambda_3 = 7614.33 + 427.63 + 98.10 = 8139.96.\\]\n",
-    "\n",
-    "The percentages of total variance explained by the principal components are:\n",
-    "\n",
-    "\\[\\frac{7614.33}{8139.96} = .935, \\quad \\frac{427.63}{8139.96} = .053, \\quad \\frac{98.10}{8139.96} = .012.\\]\n",
-    "\n",
-    "Thus, 93.5\\% of the information collected by Landsat for this specific image is captured in photograph (d). If that is sufficiently accurate for our purposes, we could compress the three images (a)-(c) into only image (d), reducing our memory requirements by 1/3."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\textbf{Computing Principal Components and the SVD}\n",
-    "\n",
-    "The singular value decomposition is the main tool for performing PCA in practice. Suppose $X$ is our centred observation matrix, and then define\n",
-    "\n",
-    "\\[A = \\frac{X^T}{\\sqrt{N}} \\in \\mathbb{R}^{p \\times N}.\\]\n",
-    "\n",
-    "We assume that $\\text{rank}(A) = p$, i.e., our $p$-dimensional measurements $x_1, \\ldots, x_N \\in \\mathbb{R}^p$ span $\\mathbb{R}^p$.\n",
-    "\n",
-    "Then $A^T A = S_x$ is the covariance matrix of our data. Now, let $A = U \\Sigma V^T$ be a singular value decomposition for $A$: since $\\text{rank}(A) = p$, $\\Sigma \\in \\mathbb{R}^{p \\times p}$, $V \\in \\mathbb{R}^{N \\times p}$, and $U \\in \\mathbb{R}^{p \\times p}$. Then\n",
-    "\n",
-    "\\[S_x = A^T A = V \\Sigma U^T U \\Sigma V^T = V \\Sigma^2 V^T \\quad (= Q \\Lambda Q^T)\\]\n",
-    "\n",
-    "i.e., $V \\in \\mathbb{R}^{p \\times p}$ orthogonally diagonalizes the symmetric matrix $S_x$, and defines a spectral factorization of $S_x$. This allows us to immediately conclude that:\n",
-    "\n",
-    "1) The right singular vectors $v_1, \\ldots, v_p$, which are the orthonormal columns of $V$, are the eigenvectors of $S_x$, and hence are the principal components of our data,\n",
-    "2) The squares of the singular values of $A$, $\\sigma_i^2$, are the $p$ eigenvalues of $S_x$.\n",
-    "\n",
-    "In practice, computing a SVD of $A$ is both faster and more accurate than computing an eigendecomposition of $S_x$, and is particularly true when the observation vector dimension $p$ is large."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What are the Missing Entries?\n",
-    "\n",
-    "Suppose that I run a web streaming service for movies for two of my friends, Amy, Bob, and Carol. It's a very special web movie service for the sci-fi movie lovers. The Movies: Inception, Star Wars Episode 1, Moana, and Inside Out. After 1 month, we ask our friends Amy, Bob, and Carol to rate the movies they've watched. Here are the results. We collect their ratings into a table below (we only allowed movies with 1-5):\n",
-    "\n",
-    "\\begin{tabular}{|c|c|c|c|c|c|}\n",
-    "\\hline\n",
-    " & The Matrix & Inception & Star Wars Ep.1 & Moana & Inside Out \\\\\n",
-    "\\hline\n",
-    "Amy & 9 & ? & ? & ? & 5 \\\\\n",
-    "Bob & ? & 3 & ? & ? & 2 \\\\\n",
-    "Carol & ? & ? & 2 & 1 & 1 \\\\\n",
-    "\\hline\n",
-    "\\end{tabular}\n",
-    "\n",
-    "Carol was asked to provide recommendations to Amy, Bob, and Carol as to which movie they should watch next. Said another way, we are asked to fill in the unknown ? ratings in the table above.\n",
-    "\n",
-    "This seems a bit unfair! Each of the unknown entries could be any value in 1-5 after all! But what if I told you an additional hint: Amy, Bob, and Carol have the same relative preferences for each movie. For example, Amy likes Inside Out 5 more than Bob likes Inside Out, and this ratio is the same across all movies. Furthermore, we are making the assumption that all columns of the table have a.e. multiples of each other.\n",
-    "\n",
-    "Thus we can conclude that Bob likes the Matrix $\\frac{9}{5} \\cdot (Amy's rating) = 4$. Similarly, Carol's rating of Inception is $\\frac{3}{2} \\cdot (Bob's rating) = 1.5$, Carol's rating of Inside Out is $\\frac{5}{2} \\cdot (Bob's rating) = 1$, and so on. Here's the completed matrix:\n",
-    "\n",
-    "\\[\n",
-    "M = \\begin{bmatrix}\n",
-    "9 & 7.5 & 10 & 5 & 5 \\\\\n",
-    "4 & 3 & 4 & 2 & 2 \\\\\n",
-    "1.8 & 1.5 & 2 & 1 & 1\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "The point of this example is that when you know something about the structure of a partially known matrix, then sometimes it is possible to intelligently fill in missing entries. In this perhaps example, the assumption that every column is a scalar multiple of every other column (one column ($\\propto$) every other column) is pretty extreme!\n",
-    "\n",
-    "One natural and useful definition is that assuming a matrix $M$ has low-rank, that rank counts as \"how\" it approximates dependency but it typically means that for a matrix $M \\in \\mathbb{R}^{m \\times n}$, that rank $M \\ll \\min\\{m,n\\}$.\n",
-    "\n",
-    "This lecture will explore how we can use this idea of structure to solve the matrix completion problem by finding the best low-rank approximation to a partially known matrix. The SVD will of course be our main tool."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/10_Ch_11_PCA_Apps/121-Apps.ipynb)\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -462,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
