added variational characterziation of eigenvalues thm

--- a/08_Ch_9_Symmetric_Matrices/103-opt_princ.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/103-opt_princ.ipynb
@@ -166,11 +166,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We can extend this logic (where we found the second largest eigenvalue by only optimizing over unit vectors which were orthogonal to $\\vv{v_1}$) to obtain a characterization of the $i^{\\text{th}}$ largest eigenvalue of a symmetric matrix $A$.\n",
+    "\n",
+    ":::{prf:theorem} The general variational characterization of eigenvalues\n",
+    "Let $A$ be a symmetric matrix with eigenvalues $\\lambda_1 \\geq \\lambda_2 \\geq \\dots \\geq \\lambda_n$ and corresponding orthogonal eigenvectors $\\vv{v_1}, \\dots, \\vv{v_n}$. Then the maximal value of the quadratic form $q(\\vv x) = \\vv x^\\top A\\vv x$ over all unit vectors that are orthogonal to the first $j - 1$ eigenvectors is its $j^{\\text{th}}$ eigenvalue:\n",
+    "\n",
+    "$$\n",
+    "\\lambda_j = \\max \\{ \\vv x^\\top A\\vv x \\mid \\|\\vv x\\| = 1, \\quad \\langle \\vv x, \\vv{v_1} \\rangle = \\dots = \\langle \\vv{x}, \\vv{v_2} \\rangle = 0 \\}.\n",
+    "$$\n",
+    ":::\n"
+   ]
   }
  ],
  "metadata": {
